--- a/MVC/4/DomeApp/DomeApp/Views/Resources.ro.resx
+++ b/MVC/4/DomeApp/DomeApp/Views/Resources.ro.resx
@@ -117,6 +117,9 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="commentContentRequired" xml:space="preserve">
+    <value>Conținutul este necesar</value>
+  </data>
   <data name="postContentRequired" xml:space="preserve">
     <value>Conținutul este necesar</value>
   </data>
