--- a/47. SQL Backlog.md
+++ b/47. SQL Backlog.md
@@ -10,3 +10,8 @@
 8. Linked Server
 9. Heckaton (memory optimised tables)
 10. datetime2
+11. Table variables
+12. CTEs
+13. TVP index
+14. Why use TRANSACTION in a store procedure?
+15. 
